2005-02-12  Alexander Gottwald  <ago at freedesktop dot org>

	* win.h
	* winfont.c
	* winmultiwindowshape.c
	* winmultiwindowwindow.c
	* winpfbdd.c
	* winshaddd.c
	* winshadddnl.c
	* winshadgdi.c
	* winwindow.c:
	Fix incorrect wrapping of functions. Ensure the pointers from pScreen 
	point to the called function even if wrapped functions changed it
	
	* winmultiwindowwindow.c:
	Set the window properties to NULL to avoid referencing freed memory 
	because of timing problems after deleting a window

	* winscrinit.c:
	Do not wrap ChangeWindowAttributes. All functions are noops currently
	
2005-02-12  Alexander Gottwald  <ago at freedesktop dot org>

	* winmsg.h:
	* winmsg.c:
	print window handle in message output
	
2005-02-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.c:
	* winkeynames.h:
	Updated fix for ABNT2 and HK_Toggle keys. 

2005-02-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.h:
	* winkeynames.h:
	Backout ABNT2 and HK_Toggle fix since it broke keys F1 and F4. 

2005-02-07  Alexander Gottwald  <ago at freedesktop dot org>

	* winlayouts.h:
	* winconfig.c:
	Moved keyboard layout table to external file.

2005-02-02  Alexander Gottwald  <ago at freedesktop dot org>

	* wincreatewnd.c:
	Force ShowWindow if XWin was started via run.exe. Fixes mainwindow
	not showing bug

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwindow.c
	* winmultiwindowwndproc.c:
	Create windows with SWP_NOACTIVATE flag (updated) (Kensuke Matsuzaki)

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	Fixes for window ordering problem (updated) (Kensuke Matsuzaki)

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winconfig.c:
	Added hungarian keyboard layout.

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winmessages.h
	* winmsg.h
	* winmsg.c
	* winmultiwindowwndproc.c
	* winwin32rootlesswndproc.c
	* winwndproc.c: